<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/background_1"
    android:orientation="vertical"
    tools:context="com.example.huyih.hgweather.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <!--completionThreshold是输入几个字符与之匹配-->
        <AutoCompleteTextView
            android:completionThreshold="1"
            android:hint="@string/editcityname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/search"
            android:layout_weight="1" android:textColor="@android:color/white"/>


        <Button
            android:text="@string/refresh"
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/refresh_time"
        android:textColor="#FFFFFF"
        android:gravity="right|bottom"
        android:id="@+id/loc"/>

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/city_name"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/city" android:textSize="55sp"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/unknown"
            android:id="@+id/txtiv"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="2"
            android:text="@string/weather"
            android:textSize="35sp"
            android:id="@+id/txt"/>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/temperature"
        android:textSize="60sp"
        android:id="@+id/tmp"/>




        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pm25"
            android:textSize="20sp"
            android:id="@+id/fl"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pm25_advice"
            android:textSize="23sp"
            android:id="@+id/api"/>

</LinearLayout>
